--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "wxrgen",
-  "version": "0.0.1",
+  "title": "WXR Generator",
+  "version": "1.0.0",
   "description": "WXR(XML) file generator for importing data to wordpress",
   "main": "./src",
   "scripts": {
@@ -9,18 +10,33 @@
   "keywords": [
     "xml",
     "wordpress",
+    "woocommerce",
     "export",
     "import",
     "wxr",
-    "generator"
+    "generator",
+    "products",
+    "menu"
   ],
-  "author": "bckr75 <maximov.vsev@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:bckr75/wxrgen.git"
+  },
+  "author": {
+    "name": "Vsevolod Krasnobaev",
+    "email": "maximov.vsev@gmail.com",
+    "url": "https://github.com/bckr75"
+  },
+  "bugs": {
+    "url": "https://github.com/bckr75/wxrgen/issues"
+  },
+  "homepage": "https://github.com/bckr75/wxrgen",
   "license": "MIT",
   "dependencies": {
     "xmlbuilder": "^9.0.1"
   },
   "devDependencies": {},
-  "repository": {
-    "url": "git@github.com:bckr75/wxrgen.git"
-  }
+  "files": [
+    "src"
+  ]
 }
