--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "name": "wxrgen",
   "title": "WXR Generator",
-  "version": "1.1.2",
-  "description": "WordPress WXR(XML) file generator for importing posts, pages, categories, tags, menus, menu items, users, WooCommerce products, product categories and product attributes, media files for products and posts",
+  "version": "1.1.3",
+  "description": "WordPress WXR (XML) file generator for importing posts, pages, categories, tags, menus, menu items, users, WooCommerce products, product categories and product attributes, media files for products and posts",
   "main": "./src",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "xml",
+    "wxr",
+    "generator",
+    "import",
     "wordpress",
     "woocommerce",
     "export",
-    "import",
-    "wxr",
-    "generator",
-    "products",
+    "product",
+    "tag",
+    "category",
+    "attachment",
+    "xml",
     "menu"
   ],
   "repository": {
